--- a/cmd/default.toml
+++ b/cmd/default.toml
@@ -6,7 +6,7 @@ addr = "127.0.0.1:7171"
 
 [db]
     addr = "127.0.0.1:3306"
-    dsn = "root:123456@tcp(127.0.0.1:3306)/tickets?timeout=5s&readTimeout=30s&writeTimeout=5s&parseTime=true&loc=Local&charset=utf8,utf8mb4"
+    dsn = "root:123456@tcp(127.0.0.1:3306)/identity?timeout=5s&readTimeout=30s&writeTimeout=5s&parseTime=true&loc=Local&charset=utf8,utf8mb4"
     active = 5
     idle = 5
     queryTimeout = "1s"
